--- a/packages/mdc-textfield/mdc-text-field.scss
+++ b/packages/mdc-textfield/mdc-text-field.scss
@@ -85,7 +85,10 @@
   box-sizing: border-box;
   width: 100%;
   height: 100%;
-  padding: 20px 16px 6px;
+  padding:
+    $mdc-text-field-input-padding-top
+    $mdc-text-field-input-padding
+    $mdc-text-field-input-padding-bottom;
   transition: mdc-text-field-transition(opacity);
   border: none;
   border-bottom: 1px solid;
